--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.5",
+    "dotenv>=0.9.9",
     "mistune>=3.1.3",
 ]
