--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bleach>=6.2.0",
     "django>=5.2.5",
     "dotenv>=0.9.9",
     "mistune>=3.1.3",
+    "pygments>=2.19.2",
 ]
